--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: jasineri/gitartwork@v1
         with:
-           user_name: escapecoco
+           user_name: WELCOME
            text: WELCOME
       - uses: jasineri/simple-push-action@v1
